[package]
name = "uufuzz"
authors = ["uutils developers"]
description = "uutils ~ 'core' uutils fuzzing library"
repository = "https://github.com/uutils/coreutils/tree/main/fuzz/uufuzz"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
console = "0.16.0"
libc = "0.2.153"
rand = { version = "0.9.0", features = ["small_rng"] }
similar = "2.5.0"
uucore = { path = "../../src/uucore", features = ["parser"] }
tempfile = "3.15.0"
