[package]
name = "arch"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_arch"
path = "arch.rs"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.uucore]
path = "../uucore"
default-features = false
features = ["utsname"]

[[bin]]
name = "arch"
path = "../../uumain.rs"
