[package]
name = "arch"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_arch"
path = "arch.rs"

[dependencies]
platform-info = { git = "https://github.com/uutils/platform-info" }

[dependencies.uucore]
path = "../uucore"
default-features = false

[[bin]]
name = "arch"
path = "../../uumain.rs"
