[package]
name = "base32"
version = "0.0.1"
authors = []
license = "MIT"
build = "../#common/mkmain.rs"

[lib]
name = "uu_base32"
path = "base32.rs"

[dependencies]
uucore = { version = "0.0.2", features = ["encoding"] }
## optional
clippy = { version = "0.0.212", optional = true }

[[bin]]
name = "base32"
path = "../#common/uumain.rs"
