[package]
name = "baseconv"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_baseconv"
path = "baseconv.rs"

[dependencies]
uucore = { path="../uucore" }
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.clippy]
version = "0.0.143"
optional = true

[[bin]]
name = "baseconv"
path = "../../uumain.rs"
