[package]
name = "cat"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_cat"
path = "cat.rs"

[dependencies]
quick-error = "1.2.2"

[dependencies.uucore]
path = "../uucore"
features = ["fs"]

[target.'cfg(unix)'.dependencies]
unix_socket = "0.5.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nix = "0.9.0"

[[bin]]
name = "cat"
path = "../../uumain.rs"
