[package]
name = "cat"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_cat"
path = "cat.rs"

[dependencies]
quick-error = "1.2.2"

[dependencies.uucore]
version = "0.0.1"
features = ["fs"]

[target.'cfg(unix)'.dependencies]
unix_socket = "0.5.0"

[[bin]]
name = "cat"
path = "../../uumain.rs"
