[package]
name = "chmod"
version = "0.0.1"
authors = []
license = "MIT"
build = "../#common/mkmain.rs"

[lib]
name = "uu_chmod"
path = "chmod.rs"

[dependencies]
libc = "0.2.42"
uucore = { version = "0.0.1", features = ["mode"] }
walker = "1.0.0"

[[bin]]
name = "chmod"
path = "../#common/uumain.rs"
