[package]
name = "chown"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_chown"
path = "chown.rs"

[dependencies]
glob = "0.2.11"
walkdir = "2.1"

[dependencies.uucore]
version = "0.0.1"
features = ["entries", "fs"]

[dependencies.clippy]
version = "0.0.212"
optional = true

[[bin]]
name = "chown"
path = "../../uumain.rs"
