[package]
name = "cp"
version = "0.0.1"
authors = [
  "Jordy Dickinson <jordy.dickinson@gmail.com>",
  "Joshua S. Miller <jsmiller@uchicago.edu>",
]

[lib]
name = "uu_cp"
path = "cp.rs"

[dependencies]
getopts = "0.2.14"
libc = "0.2.26"
walkdir = "1.0.7"
clap = "2.20.0"
quick-error = "1.1.0"
uucore = { path="../uucore" }

[[bin]]
name = "cp"
path = "main.rs"
