[package]
name = "hashsum"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_hashsum"
path = "hashsum.rs"

[dependencies]
digest = "0.6.2"
getopts = "0.2.14"
hex = "0.2.0"
libc = "0.2.26"
md5 = "0.3.5"
regex = "0.2.2"
regex-syntax = "0.5.0"
sha1 = "0.6.0"
sha2 = "0.6.0"
sha3 = "0.6.0"
uucore = { path="../uucore" }

[[bin]]
name = "hashsum"
path = "../../uumain.rs"
