[package]
name = "hashsum"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_hashsum"
path = "hashsum.rs"

[dependencies]
digest = "0.7.2"
getopts = "0.2.14"
hex = "0.2.0"
libc = "0.2.42"
md5 = "0.3.5"
regex = "1.0.0"
regex-syntax = "0.6.1"
sha1 = "0.6.0"
sha2 = "0.6.0"
sha3 = "0.6.0"
uucore = { path="../uucore" }

[[bin]]
name = "hashsum"
path = "../../uumain.rs"
