[package]
name = "hostname"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_hostname"
path = "hostname.rs"

[dependencies]
libc = "0.2.42"
winapi = { version = "0.3", features = ["sysinfoapi", "winsock2"] }
getopts = "0.2"
uucore = "0.0.1"

[[bin]]
name = "hostname"
path = "../../uumain.rs"
