[package]
name = "ls"
version = "0.0.1"
authors = ["Jeremiah Peschka <jeremiah.peschka@gmail.com>"]

[lib]
name = "uu_ls"
path = "ls.rs"

[dependencies]
getopts = "*"
pretty-bytes = "*"
term_grid = "*"
termsize = "*"
time = "*"
lazy_static = "*"
unicode-width = "*"

[dependencies.uucore]
path = "../uucore"
default-features = false
features = ["entries"]

[[bin]]
name = "ls"
path = "main.rs"
