[package]
name = "more"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_more"
path = "more.rs"

[dependencies]
getopts = "0.2.18"
uucore = "0.0.1"

[target.'cfg(target_os = "redox")'.dependencies]
redox_termios = "0.1"
redox_syscall = "0.1"

[target.'cfg(all(unix, not(target_os = "fuchsia")))'.dependencies]
nix = "0.8.1"

[[bin]]
name = "more"
path = "../../uumain.rs"
