[package]
name = "nl"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_nl"
path = "nl.rs"

[dependencies]
getopts = "0.2.14"
libc = "0.2.42"
aho-corasick = "0.6.3"
memchr = "1.0.1"
regex = "1.0.0"
regex-syntax = "0.6.1"
uucore = { path="../uucore" }

[[bin]]
name = "nl"
path = "../../uumain.rs"
