[package]
name = "nl"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_nl"
path = "nl.rs"

[dependencies]
getopts = "0.2.18"
libc = "0.2.42"
aho-corasick = "0.6.5"
memchr = "1.0.1"
regex = "1.0.1"
regex-syntax = "0.6.1"
uucore = "0.0.1"

[[bin]]
name = "nl"
path = "../../uumain.rs"
