[package]
name = "pr"
version = "0.0.1"
authors = ["Tilak Patidar <tilakpatidar@gmail.com>"]
build = "../../mkmain.rs"

[lib]
name = "uu_pr"
path = "pr.rs"

[dependencies]
getopts = "0.2.18"
time = "0.1.40"
chrono = "0.4.6"
quick-error = "1.2.2"
itertools = "0.7.8"

[dependencies.uucore]
path = "../uucore"
features = ["libc"]

[target.'cfg(unix)'.dependencies]
unix_socket = "0.5.0"

[[bin]]
name = "pr"
path = "../../uumain.rs"
