[package]
name = "ptx"
version = "0.0.1"
authors = []
license = "MIT"
build = "../#common/mkmain.rs"

[lib]
name = "uu_ptx"
path = "ptx.rs"

[dependencies]
aho-corasick = "0.7.3"
getopts = "0.2.18"
libc = "0.2.42"
memchr = "2.2.0"
regex = "1.0.1"
regex-syntax = "0.6.7"
uucore = "0.0.2"

[[bin]]
name = "ptx"
path = "../#common/uumain.rs"
