[package]
name = "readlink"
version = "0.0.1"
authors = []
build = "../#common/mkmain.rs"

[lib]
name = "uu_readlink"
path = "readlink.rs"

[dependencies]
getopts = "0.2.18"
libc = "0.2.42"

[dependencies.uucore]
version = "0.0.1"
features = ["fs"]

[[bin]]
name = "readlink"
path = "../#common/uumain.rs"
