[package]
name = "shred"
version = "0.0.1"
authors = []
license = "MIT"
build = "../#common/mkmain.rs"

[lib]
name = "uu_shred"
path = "shred.rs"

[dependencies]
filetime = "0.2.1"
getopts = "0.2.18"
libc = "0.2.42"
rand = "0.5"
time = "0.1.40"
uucore = "0.0.2"

[[bin]]
name = "shred"
path = "../#common/uumain.rs"
