[package]
name = "sort"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_sort"
path = "sort.rs"

[dependencies]
getopts = "0.2.14"
semver = "0.9.0"
itertools = "0.7.8"

[dependencies.uucore]
path = "../uucore"
features = ["fs"]

[[bin]]
name = "sort"
path = "../../uumain.rs"
