[package]
name = "sort"
version = "0.0.1"
authors = []
license = "MIT"
build = "../#common/mkmain.rs"

[lib]
name = "uu_sort"
path = "sort.rs"

[dependencies]
getopts = "0.2.18"
itertools = "0.8.0"
semver = "0.9.0"
uucore = { version = "0.0.1", features = ["fs"] }

[[bin]]
name = "sort"
path = "../#common/uumain.rs"
