[package]
name = "stdbuf"
version = "0.0.1"
authors = []
build = "build.rs"

[lib]
name = "uu_stdbuf"
path = "stdbuf.rs"

[dependencies]
getopts = "0.2.14"
uucore = { path="../uucore" }
libstdbuf = { path="libstdbuf" }

[build-dependencies]
cc = "1.0"

[[bin]]
name = "stdbuf"
path = "../../uumain.rs"
