[package]
name = "sync"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_sync"
path = "sync.rs"

[dependencies]
getopts = "0.2.14"
libc = "0.2.26"
winapi = { version = "0.3", features = ["handleapi", "winerror"] }
kernel32-sys = "0.2.2"

[dependencies.uucore]
path = "../uucore"
features = ["wide"]

[[bin]]
name = "sync"
path = "../../uumain.rs"
